docs(activity_1): update report bibliography

--- a/activity_1/report/bibliography.bib
+++ b/activity_1/report/bibliography.bib
@@ -4,3 +4,10 @@
     howpublished = "\url{https://www.gurobi.com/}",
     note         = "[acessado em 2022-03-30]"
 }
+
+@misc{bib:numpy,
+    author       = {NumPy Developers},
+    title        = {NumPy documentation},
+    howpublished = "\url{https://numpy.org/doc/stable/index.html}",
+    note         = "[acessado em 2022-04-01]"
+}
