--- a/activity_2/report/bibliography.bib
+++ b/activity_2/report/bibliography.bib
@@ -1,13 +1,25 @@
-@misc{bib:gurobi,
-    author       = {Gurobi Optimization},
-    title        = {Gurobi Optimization},
-    howpublished = "\url{https://www.gurobi.com/}",
-    note         = "[acessado em 2022-03-30]"
+@misc{gurobi,
+    author = "Gurobi Optimization, LLC",
+    title  = "Gurobi Optimizer Reference Manual",
+    year   = 2022,
+    url    = "http://www.gurobi.com"
 }
 
-@misc{bib:numpy,
-    author       = {NumPy Developers},
-    title        = {NumPy documentation},
-    howpublished = "\url{https://numpy.org/doc/stable/index.html}",
-    note         = "[acessado em 2022-04-01]"
+@conference{jupyter,
+    Title        = {Jupyter Notebooks -- a publishing format for reproducible computational workflows},
+    Author       = {Thomas Kluyver and Benjamin Ragan-Kelley and Fernando P{\'e}rez and Brian Granger and Matthias Bussonnier and Jonathan Frederic and Kyle Kelley and Jessica Hamrick and Jason Grout and Sylvain Corlay and Paul Ivanov and Dami{\'a}n Avila and Safia Abdalla and Carol Willing},
+    Booktitle    = {Positioning and Power in Academic Publishing: Players, Agents and Agendas},
+    Editor       = {F. Loizides and B. Schmidt},
+    Organization = {IOS Press},
+    Pages        = {87 - 90},
+    Year         = {2016}
+}
+
+@book{python3,
+    author    = {Van Rossum, Guido and Drake, Fred L.},
+    title     = {Python 3 Reference Manual},
+    year      = {2009},
+    isbn      = {1441412697},
+    publisher = {CreateSpace},
+    address   = {Scotts Valley, CA}
 }
