fix(theme_proposal): change document language to english

--- a/computational_project/theme_proposal/theme_proposal.tex
+++ b/computational_project/theme_proposal/theme_proposal.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage[a4paper]{geometry}
-\usepackage[brazil]{babel}
+\usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{url}
 \usepackage{hyperref}
