--- a/computational_project/theme_proposal/theme_proposal.tex
+++ b/computational_project/theme_proposal/theme_proposal.tex
@@ -68,8 +68,10 @@
 
 \newcommand{\vehicleInput}{\vehicleO}
 
-\newcommand{\constraintsPredicateSymbol}{\ensuremath{\mathscr{C}}\xspace}
-\newcommand{\constraintsPredicate}[1]{\ensuremath{\constraintsPredicateSymbol \left( #1 \right)}\xspace}
+\newcommand{\zoKPV}{0-1 Knapsack Problem\xspace}
+\newcommand{\zoKP}{0-1KP\xspace}
+\newcommand{\MKPV}{Multidimensional Knapsack Problem\xspace}
+\newcommand{\MKP}{MKP\xspace}
 
 \begin{document}
 
@@ -221,6 +223,30 @@ A subset $\itemOutput \subseteq \itemInput$ of the input items.
 \end{eqnarray}
 
 Minimize the number of items removed so that all constraints are satisfied.
+
+\section{Similarity with the Knapsack Problem}
+
+\cite{bib:knapsack-problems} gives a definition for a \zoKPV (\zoKP):
+
+\begin{eqnarray}
+	\label{problem:knapsack-problem}
+	\max & \displaystyle\sum\limits_{j=1}^{n} p_j x_j \\
+	\subjectedTo
+		& \displaystyle\sum\limits_{j=1}^{n} w_j x_j \leq c \nonumber\\
+		& x_j \in \Set{0, 1} \quad \forall j \in \Set{1, \dots, n} \nonumber
+\end{eqnarray}
+
+in which $p_j$ and $w_j$ are know as the profit and the weight of the item $j$, respectively.
+
+Our problem can be seen as:
+
+\begin{enumerate}
+	\item a \MKPV (\MKP) since the weight function is multidimensional;
+	\item a \zoKP in which the profit of all items are equal (the exact value of the profit depends on how one decide to formulate the problem);
+	\item a \zoKP with an extra restriction on how the items can be inserted (or removed) from the knapsack (constraint \eqref{constraint:stacking});
+	\item it is still a ``0-1'' problem in the sense that one has to decide whether to remove a specific item or not;
+\end{enumerate}
+
 
 % ----------- REFERENCES -----------
 \bibliographystyle{unsrt}
